--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,10 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2017",
+    "typeRoots": [
+      "node_modules/@types",
+      "src/alertyfytype.d.ts"
+    ],
     "module": "es2020",
     "lib": [
       "es2020",
